package patterns.facade.solidoverwegingen;

public class GasLantaarn {
}
