package patterns.facade.solidoverwegingen;

public class LantaarnProjector {
}
