package patterns.facade.solidoverwegingen;

public class Vrouw {
}
