package patterns.facade.solidoverwegingen;

public class ZwengelGrammofoon {
}
