@startuml

title __SOLIDOVERWEGINGEN's Class Diagram__\n

  namespace patterns.facade {
    namespace solidoverwegingen {
      class patterns.facade.solidoverwegingen.GasLantaarn {
      }
    }
  }
  

  namespace patterns.facade {
    namespace solidoverwegingen {
      class patterns.facade.solidoverwegingen.HomeTheater1930 {
          + KijkFilmMetPopcorn()
          + LuisterNaarMuziek()
          + StopFilm()
          + muteGeluid()
      }
    }
  }
  

  namespace patterns.facade {
    namespace solidoverwegingen {
      class patterns.facade.solidoverwegingen.LantaarnProjector {
      }
    }
  }
  

  namespace patterns.facade {
    namespace solidoverwegingen {
      class patterns.facade.solidoverwegingen.Vrouw {
      }
    }
  }
  

  namespace patterns.facade {
    namespace solidoverwegingen {
      class patterns.facade.solidoverwegingen.ZwengelGrammofoon {
      }
    }
  }
  

  patterns.facade.solidoverwegingen.HomeTheater1930 .up.|> patterns.facade.solution.HomeTheaterInterface
  patterns.facade.solidoverwegingen.HomeTheater1930 o-- patterns.facade.solidoverwegingen.ZwengelGrammofoon : grammo
  patterns.facade.solidoverwegingen.HomeTheater1930 o-- patterns.facade.solidoverwegingen.GasLantaarn : licht
  patterns.facade.solidoverwegingen.HomeTheater1930 o-- patterns.facade.solidoverwegingen.LantaarnProjector : projector
  patterns.facade.solidoverwegingen.HomeTheater1930 o-- patterns.facade.solidoverwegingen.Vrouw : vrouw


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
